fixed gap

--- a/SRC/Frontend/CSS/header.scss
+++ b/SRC/Frontend/CSS/header.scss
@@ -104,7 +104,7 @@ body {
                     //justify-content:center ;
                     padding-block-start: 1em;
                     align-items: center;
-                    gap: 2em;
+                    gap: 1em;
                     width: 100%;
                     .nav-display-button {
                         display: none;
